--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -2,12 +2,9 @@
 @import "navigation";
 @import "layout";
 @import "footer";
-
 /* Royal blue themed version of zulubow frontend mockup site 
 Ccolors: - White  - Pink  - Gray/Silver  - Royal blue  */
-
 *,*:before,*:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;margin:0;padding:0;}
-
 body, main {
 	font: $body-font;
 	background: burlywood;	
@@ -18,6 +15,7 @@ body, main {
 }
 main{
     margin: $main-margin;
+	box-shadow: 0px 2px 15px black;
 }
 .content {	
 	display: flex;
